k8s/backend/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_NAME}
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: ${APP_NAME}
    spec:
      imagePullSecrets:
        - name: gitlab-registry
      containers:
        - name: ${APP_NAME}
          image: ${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: jarvis-mark14041392661573222138
              mountPath: /usr/src/app/rds/rds-creds # this path can be customized for your application
              readOnly: true
          resources:
            requests:
              memory: '128Mi'
              cpu: '0.25'
            limits:
              memory: '512Mi'
              cpu: '1'
      volumes:
        - name: jarvis-mark14041392661573222138
          csi:
            driver: secrets-store.csi.k8s.io
            volumeAttributes:
              secretProviderClass: jarvis-mark14041392661573222138
            readOnly: true
