k8s/backend/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${APP_NAME}-svc
spec:
  ports:
    - port: 3000
      protocol: TCP
    - port: 3005
      protocol: TCP
  selector:
    app: ${APP_NAME}
